--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
   --orange: hsl(25, 97%, 53%);
   --white: hsl(0, 0%, 100%);
@@ -5,7 +7,134 @@
   --dark-blue: hsl(213, 19%, 18%);
   --very-dark-blue: hsl(216, 12%, 8%);
 }
+html{
+  height: 100%;
+}
 
 body {
   background-color: var(--very-dark-blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "Overpass";
+  height: 100%;
+}
+
+main{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: clamp(400px,50%,450px);
+  width: clamp(300px,90%,500px);
+  border-radius: 10px;
+  background: linear-gradient(hsl(214, 19%, 22%), var(--dark-blue));
+}
+.rating{
+  height: 100%;
+  margin: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.hidden{
+  display: none !important; 
+}
+.star{
+overflow:visible;
+padding: 2%;
+width: 8%;
+max-width: 30px;
+border-radius: 50px;
+background-color: hsl(211, 20%, 29%);
+}
+
+.top{
+width: 100%;
+display: flex;
+ 
+}
+.text-L{
+  font-size: 30px;
+  font-weight: 700;
+}
+.text-M{
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 28px;
+}
+
+.color-gray{
+  color:var(--light-grey)
+}
+.text-main .text-L{
+  margin-bottom:3%;
+}
+
+.rating-buttons{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  
+}
+.rating-buttons button{
+  width: 15%;
+  aspect-ratio: 1/1;
+  border-radius: 100%;
+  border:none;
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--light-grey);
+  background-color: hsl(211, 20%, 29%);
+}
+
+.rating-buttons button:hover:not(.active){
+  background-color: white;
+  color: var(--dark-blue);
+}
+.rating-buttons .active{
+  background-color: var(--orange);
+  color: var(--dark-blue);
+}
+
+.submit{
+  width: 100%;
+  height: 12%;
+  border:none;
+  border-radius: 30px;
+  background-color: var(--orange);
+  font-size: 20px;
+  font-weight: 600;
+  color: var(--dark-blue);
+
+}
+
+
+.submit:hover{
+  background-color: white;
+}
+
+
+.thank-you{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  margin: 5%;
+  text-align: center;
+}
+
+.thank-you-ill{
+  width: 50%;
+}
+
+.selected-text{
+  background-color: #36465c;
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: orange;
 }
